// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders payment errors 1`] = `
<CheckoutCartTotal
  discountSummaries={Array []}
  paymentError="Payment authentication failed"
  shippingTotal={5}
  subTotal={15}
  total={20}
>
  <Sticker>
    <div>
      <div
        aria-label="Cart total summary"
        className="u-sticky c-cart-summary"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Total Price: 
          </dt>
          <dd>
             £
            15.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping costs: 
          </dt>
          <dd>
             
            £5.00
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="u-bold"
        >
          <dt>
             TOTAL: 
          </dt>
          <dd>
             £
            20.00
             
          </dd>
        </dl>
        <dl>
          <dt
            className="c-cart-summary__VAT"
          >
            * Including VAT
          </dt>
        </dl>
        <div
          className="c-checkout-cart-total__payment-error"
        >
          Payment authentication failed
        </div>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;

exports[`renders the cart's total, subtotal and shipping cost 1`] = `
<CheckoutCartTotal
  discountSummaries={Array []}
  shippingTotal={5}
  subTotal={15}
  total={20}
>
  <Sticker>
    <div>
      <div
        aria-label="Cart total summary"
        className="u-sticky c-cart-summary"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Total Price: 
          </dt>
          <dd>
             £
            15.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping costs: 
          </dt>
          <dd>
             
            £5.00
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="u-bold"
        >
          <dt>
             TOTAL: 
          </dt>
          <dd>
             £
            20.00
             
          </dd>
        </dl>
        <dl>
          <dt
            className="c-cart-summary__VAT"
          >
            * Including VAT
          </dt>
        </dl>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;
